Part_1/Exercise_1.12/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-application-service
spec:
  type: ClusterIP
  selector:
    app: todo-application
  ports:
    - name: http
      protocol: TCP
      port: 1234
      targetPort: 3000
